added DTM, TF-IDF, and cleaned up

--- a/day-1/preprocessing.ipynb
+++ b/day-1/preprocessing.ipynb
@@ -21,7 +21,6 @@
     "* Practice the basic ingredients in text preprocessing\n",
     "\n",
     "## Outline\n",
-    "(TO DO: Add hyperlinks for each section)\n",
     "\n",
     "* [Reading in .txt and .csv files](#read)\n",
     "* [Tokenizing words](#tokenize)\n",
@@ -43,7 +42,7 @@
     "\n",
     "We will do some review, but this notebook assumes you have basic familiarity with Python. If you need a beginner's introduction to coding in Python, please walk through the intro to Python notebook at `solutions/intro-to-python.ipynb` and/or [this one](https://github.com/lknelson/text-analysis-course/blob/master/scripts/01.25.02_PythonBasics.ipynb) *before* the workshop. \n",
     "\n",
-    "We will also use some regular expressions, which are character sequences defining a search pattern. Usually this pattern is then used by string searching algorithms for \"find\" or \"find and replace\" operations. Don't worry if you haven't seen these before--we will keep it simple. If you want to get more out of this session, go through [this notebook on regular expressions](https://github.com/lknelson/text-analysis-course/blob/master/scripts/03.20.01_RegularExpressions.ipynb).\n",
+    "We will also use some regular expressions, which are character sequences defining a search pattern. Usually this pattern is then used by string searching algorithms for \"find\" or \"find and replace\" operations. Don't worry if you haven't seen these before--we will keep it simple. If you want to get more out of this session, first go through [this notebook on regular expressions](https://github.com/lknelson/text-analysis-course/blob/master/scripts/03.20.01_RegularExpressions.ipynb).\n",
     "\n",
     "## Vocabulary\n",
     "\n",
@@ -55,14 +54,8 @@
     "    *  A token is an instance of a sequence of characters in some particular document that are grouped together as a useful semantic unit for processing.\n",
     "* *type*:\n",
     "    * A type is the class of all tokens containing the same character sequence.\n",
-    "\n",
-    "## Further Resources\n",
-    "\n",
-    "This is a great starting point, but there is a lot more to learn about preprocessing. To acquaint yourself with a few more tools, check out `solutions/preprocessing_extra.ipynb`, the other resources listed in [the workshop repo](https://github.com/jhaber-zz/nlp-python-2020), and the [useful intro scripts prepared by my colleague Laura Nelson](https://github.com/lknelson/text-analysis-course). To gain more practice and tools, come back for tomorrow's session!\n",
-    "\n",
-    "[Denny, Matthew J., and Arthur Spirling. 2018. “Text Preprocessing for Unsupervised Learning: Why It Matters, When It Misleads, and What to Do about It.” Political Analysis 26(2):168–189.\n",
-    "](https://www.cambridge.org/core/journals/political-analysis/article/text-preprocessing-for-unsupervised-learning-why-it-matters-when-it-misleads-and-what-to-do-about-it/AA7D4DE0AA6AB208502515AE3EC6989E)\n",
-    "<br>Documents importance of preprocessing choices to modeling results.\n",
+    "* *Document Term Matrix (DTM)*:\n",
+    "    * a mathematical matrix that describes the frequency of terms that occur in a collection of documents. In a DTM, rows correspond to documents in the collection and columns correspond to terms. Making a DTM is a common preprocessing step: it takes in tokenized texts and makes them ready for downstream tasks (e.g., topic models, supervised machine learning models).\n",
     "\n",
     "**__________________________________**\n"
    ]
@@ -263,7 +256,7 @@
     "\n",
     "Read in all the `.csv` files in the folder `amazon`. Extract out only the `text` column from THE FIRST TWO files and store them all in a list called `reviews`. \n",
     "\n",
-    "**Hint 1:** Not all of these files heave a header row to indicate column names. But for your reference, the columns are in this order: <br>\n",
+    "**Hint 1:** Not all of these files have a header row to indicate column names. But for your reference, the columns are in this order: <br>\n",
     "```Id, ProductId, UserId, ProfileName, HelpfulnessNumerator, HelpfulnessDenominator, Score, Time, Summary, Text```\n",
     "\n",
     "**Hint 2:** You can deal with `.csv` files without header rows by calling the argument `header=None` when loading into a pandas DataFrame. This lets pandas know not to mistake the first row of data for column names. "
@@ -487,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge - SOLUTION\n",
+    "### Challenge\n",
     "\n",
     "The file `example2.txt` has more punctuation problems. Read it in (using same pattern as above) and see what the problems are. Try the different approaches above and see what works best. If you're already familiar with regular expressions, modify that code to work for as many cases as you can. What does this suggest about tokenizing text that includes punctuation?\n",
     "<br> (For help with regular expressions, see this [cheat sheet](https://www.debuggex.com/cheatsheet/regex/python))"
@@ -801,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can count the frequency of each word type with the built-in `Counter` in Python. This basically just takes the set of word types (we calculated this above as `vocabulary`) and makes a special Python dictionary with each value being the number of times it appears in the list. We can ask that dictionary for the most common words, or for the frequency of individual word types. \n",
+    "We can count the frequency of each word type with the built-in `Counter` in Python. This basically just takes the set of word types (we calculated this above when counting word types) and makes a special Python dictionary with each value being the number of times it appears in the list. We can ask that dictionary for the most common words, or for the frequency of individual word types. \n",
     "\n",
     "First, clean and normalize the text:"
    ]
@@ -952,7 +945,7 @@
     "\n",
     "Stemming and lemmatization both refer to remove morphological affixes on words. For example, if we stem the word \"grows\", we get \"grow\". If we stem the word \"running\", we get \"run\". We do this because often we care more about the core content of the word (i.e. that it has something to do with growth or running, rather than the fact that it's a third person present tense verb, or progressive participle).\n",
     "\n",
-    "NLTK provides many algorithms for stemming. For English, a great baseline is the [Porter](https://github.com/nltk/nltk/blob/develop/nltk/stem/porter.py) algorithm, which is in spirit isn't that far from a bunch of regular expressions."
+    "NLTK provides many algorithms for stemming. For English, a great baseline is the [Porter](https://github.com/nltk/nltk/blob/develop/nltk/stem/porter.py) algorithm, which in spirit isn't that far from a bunch of regular expressions."
    ]
   },
   {
@@ -1103,7 +1096,7 @@
     "with open(fname, encoding='utf-8') as f:\n",
     "    raw = f.read()\n",
     "pride = raw[679:684814]\n",
-    "pride"
+    "pride[:1000]"
    ]
   },
   {
@@ -1120,26 +1113,10 @@
    "metadata": {},
    "source": [
     "## Document-Term Matrix<a id='DTM'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Things we didn't cover\n",
-    "(see `solutions/preprocessing_extra.ipynb` and [this repo](https://github.com/geoffbacon/nlp-with-nltk-spacy/blob/master/03-NLTK.ipynb) for more on these)\n",
     "\n",
-    "- Reading in JSON, HTML, and XML files \n",
-    "- Removing infrequent words\n",
-    "- Named entity recognition\n",
-    "- Scikit-learn preprocessing pipelines\n",
-    "- Syntactic parsing\n",
-    "- Information extraction\n",
-    "- Removing markup from HTML\n",
-    "- Extracting numerical features\n",
-    "- Term Frequency Inverse Document Frequency (TF-IDF)\n",
-    "- SpaCy"
+    "Scikit-learn is the standard method of using DTM in Python. The main class for this is [CountVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html).\n",
+    "\n",
+    "First, we'll preprocess the text as above, then we'll turn it into a DTM in a few different ways."
    ]
   },
   {
@@ -1147,7 +1124,174 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# preprocessing\n",
+    "whitespace_pattern = r'\\s+'\n",
+    "clean = [re.sub(url_pattern, URL_SIGN, t) for t in tweet_text]\n",
+    "clean = [re.sub(hashtag_pattern, HASHTAG_SIGN, t) for t in clean]\n",
+    "clean = [re.sub(digit_pattern, DIGIT_SIGN, t) for t in clean]\n",
+    "clean = [re.sub(whitespace_pattern, ' ', t) for t in clean]\n",
+    "clean[:4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our next step is to turn the text into a document term matrix using the scikit-learn function called `CountVectorizer`. There are two ways to do this. We can turn it into a sparse matrix type, which can be used within scikit-learn for further analyses. We do this using the `fit_transform()` function from `CountVectorizer`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import the function CountVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "countvec = CountVectorizer()\n",
+    "sparse_dtm = countvec.fit_transform(clean)\n",
+    "print(sparse_dtm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This format is called Compressed Sparse Format. It saves a lot of memory to store the DTM in this format, but it is difficult to look at for a human. Compressed Sparse Format stores a matrix with lots of zeroes, only without the zeroes. Let's look at a sample to see the concealed zeroes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_dtm.toarray()[:10,:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do we know what each number (row) indicates in Compressed Sparse Format? We can access the words themselves through the `CountVectorizer` function `get_feature_names`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(countvec.get_feature_names()[::1000]) # get every 1000th word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To illustrate the techniques in this lesson we will first convert this matrix back to a Pandas dataframe, a format we're more familiar with. For larger datasets, you will have to use the Compressed Sparse Format. \n",
+    "\n",
+    "*Note*: In practice it is rare to transform a DTM into a Pandas dataframe, because of memory issues. I'm doing it today so we can understand the intuition behind the DTM. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the same method as above, but convert it into a Pandas dataframe.\n",
+    "# Note this takes quite a bit more memory, so will not be good for bigger data.\n",
+    "dtm_df = pd.DataFrame(countvec.fit_transform(clean).toarray(), columns=countvec.get_feature_names())\n",
+    "\n",
+    "#view the DTM DataFrame\n",
+    "dtm_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What can we do with a DTM?**\n",
+    "\n",
+    "We can do a number of calculations using a DTM. Because it is in the format of a matrix, we can perform any matrix algebra or vector manipulation on it, which enables some pretty exciting things (think vector space and Euclidean geometry). But, what do we lose when we represent text in this format? (Hint: Think \"bag of words\".)\n",
+    "\n",
+    "For a toy example, we can quickly identify the most frequent words (compare this to how many steps it took using NLTK)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dtm_df.sum().sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge\n",
+    "\n",
+    "I've read in a bunch of Jane Austen books into a variable called `books`, which is a list of strings and each string is an entire book. Turn them into a DTM. What will be the rows and columns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AUSTEN_DIR = os.path.join(DATA_DIR, 'austen', '*.txt')\n",
+    "fnames = glob.glob(AUSTEN_DIR)\n",
+    "books = []\n",
+    "for fname in fnames:\n",
+    "    with open(fname) as f:\n",
+    "        text = f.read()\n",
+    "    books.append(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Things we didn't cover\n",
+    "(see Resources below for more on these)\n",
+    "\n",
+    "- Reading in JSON, HTML, and XML files \n",
+    "- Removing infrequent words\n",
+    "- Named entity recognition\n",
+    "- [Scikit-learn preprocessing pipelines](https://towardsdatascience.com/setting-up-text-preprocessing-pipeline-using-scikit-learn-and-spacy-e09b9b76758f)\n",
+    "- Syntactic parsing\n",
+    "- Information extraction\n",
+    "- Removing markup from HTML\n",
+    "- Extracting numerical features\n",
+    "- SpaCy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further Resources\n",
+    "\n",
+    "This is a great starting point, but there is a lot more to learn about preprocessing. To acquaint yourself with a few more tools and try a few more challenges, check out `extra/preprocessing_extra.ipynb`. There are also other resources listed in [the workshop repo](https://github.com/jhaber-zz/nlp-python-2020) and [many useful intro-level NLP scripts prepared by Laura Nelson](https://github.com/lknelson/text-analysis-course). To gain more practice and tools, come back for tomorrow's session!\n",
+    "\n",
+    "[Denny, Matthew J., and Arthur Spirling. 2018. “Text Preprocessing for Unsupervised Learning: Why It Matters, When It Misleads, and What to Do about It.” Political Analysis 26(2):168–189.\n",
+    "](https://www.cambridge.org/core/journals/political-analysis/article/text-preprocessing-for-unsupervised-learning-why-it-matters-when-it-misleads-and-what-to-do-about-it/AA7D4DE0AA6AB208502515AE3EC6989E)\n",
+    "<br>Documents importance of preprocessing choices to modeling results."
+   ]
   }
  ],
  "metadata": {
