--- a/day-2/dictionary-methods-additional-exercises-pt0.ipynb
+++ b/day-2/dictionary-methods-additional-exercises-pt0.ipynb
@@ -97,6 +97,82 @@
    "source": [
     "# Your code here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Weighted dictionary: Additional exercises\n",
+    "* For an extra challenge, do these exercises **without** copying and pasting code from workshop notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "con_score = pandas.read_csv('../day-2/data/Concreteness_ratings_Brysbaert_et_al.csv')\n",
+    "print(con_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1\n",
+    "* open the **Machiavelli_ThePrince.txt** and **Marx_CommunistManifesto.txt**.\n",
+    "* make a data frame that contains both of them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 2\n",
+    "* take a subset of the DTM, keeping only the intersection between the words in our corpus and the word in the dictionary.\n",
+    "* tanspose and rename the column\n",
+    "* finally merge our data frame with con_score data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3\n",
+    "* Calculate and print the **average concreteness score** for each text.\n",
+    "* What is the magnitude of the difference?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
   }
  ],
  "metadata": {
