cleaned up final challenges

--- a/day-1/preprocessing.ipynb
+++ b/day-1/preprocessing.ipynb
@@ -805,7 +805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tweets = ' '.join(tweets)\n",
+    "all_tweets = ' '.join(tweet_text)\n",
     "clean = re.sub(url_pattern, URL_SIGN, all_tweets)\n",
     "clean = re.sub(hashtag_pattern, HASHTAG_SIGN, clean)\n",
     "clean = re.sub(digit_pattern, DIGIT_SIGN, clean)\n",
@@ -829,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another common way to count frequent words is with a built-in NLTK module:"
+    "Another common way to count frequent words is with the built-in NLTK module, `FreqDist`:"
    ]
   },
   {
@@ -838,11 +838,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#apply the nltk function FreqDist to count the number of times each token occurs.\n",
+    "# Count the number of times each token occurs.\n",
     "from nltk import FreqDist\n",
     "word_frequency = FreqDist(tokens)\n",
     "\n",
-    "#this creates an NLTK object\n",
+    "# this creates an NLTK object\n",
     "print(word_frequency)"
    ]
   },
@@ -866,8 +866,9 @@
     "- Strip all whitespace\n",
     "- Make all characters lower case\n",
     "- Replace any URLs and digits\n",
+    "- Remove punctuation\n",
     "\n",
-    "Then find the most common 50 words."
+    "Then find the most common 25 words."
    ]
   },
   {
@@ -881,10 +882,12 @@
     "reviews = []\n",
     "column_names = ['id', 'product_id', 'user_id', 'profile_name', 'helpfulness_num', 'helpfulness_denom',\n",
     "               'score', 'time', 'summary', 'text']\n",
-    "for fname in fnames[:2]:\n",
+    "for fname in fnames[:2]: # for manageable scale, just use first two files\n",
     "    df = pd.read_csv(fname, names=column_names)\n",
     "    text = list(df['text'])\n",
-    "    reviews.extend(text)"
+    "    reviews.extend(text)\n",
+    "    \n",
+    "reviews[:3]"
    ]
   },
   {
@@ -925,7 +928,7 @@
    "source": [
     "### Challenge \n",
     "\n",
-    "Use the list `stop` of English stopwords to remove stopwords from our tokenized review above."
+    "Use the list `stop` of English stopwords to remove stopwords from our tokenized reviews created above."
    ]
   },
   {
@@ -1040,7 +1043,7 @@
    "source": [
     "## POS tagging<a id='POS'></a>\n",
     "\n",
-    "POS tagging means assigning each token a part-of-speech (e.g. noun, verb, adjective, etc.). Again, there are many different [alternatives](https://github.com/nltk/nltk/tree/develop/nltk/tag), but NLTK keeps its recommended POS tagger available through the function `pos_tag`. The tagger expects a list of tokens as input.When doing POS tagging, it is advisable **not** to remove stop words beforehand (although you are free to do it afterwards)."
+    "POS tagging means assigning each token a part-of-speech (e.g. noun, verb, adjective, etc.). Again, there are many different [alternatives](https://github.com/nltk/nltk/tree/develop/nltk/tag), but NLTK keeps its recommended POS tagger available through the function `pos_tag`. The tagger expects a list of tokens as input. When doing POS tagging, it is advisable **not** to remove stop words beforehand (although you are free to do it afterwards)."
    ]
   },
   {
@@ -1067,6 +1070,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What do all these POS tags mean? Let's ask NLTK:\n",
+    "nltk.download('tagsets')\n",
+    "nltk.help.upenn_tagset()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1077,9 +1091,11 @@
     "- Strip whitespace\n",
     "- Replace all numbers with '0'\n",
     "- Tokenize\n",
+    "- Remove punctuation\n",
     "- Tag each token with a POS tag\n",
     "\n",
     "Make sure you know:\n",
+    "\n",
     "- What type is the result?\n",
     "- What type is each element of the result?\n",
     "- What type are the elements of the elements of the result?"
@@ -1114,6 +1130,8 @@
    "source": [
     "## Document-Term Matrix<a id='DTM'></a>\n",
     "\n",
+    "A Document-Term Matrix (DTM) is another common NLP preprocessing step to prepare a corpus for modeling tasks. A DTM is a mathematical matrix that describes the frequency of terms that occur in a collection of documents. In a DTM, rows correspond to documents in the collection and columns correspond to terms. \n",
+    "\n",
     "Scikit-learn is the standard method of using DTM in Python. The main class for this is [CountVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html).\n",
     "\n",
     "First, we'll preprocess the text as above, then we'll turn it into a DTM in a few different ways."
@@ -1138,7 +1156,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our next step is to turn the text into a document term matrix using the scikit-learn function called `CountVectorizer`. There are two ways to do this. We can turn it into a sparse matrix type, which can be used within scikit-learn for further analyses. We do this using the `fit_transform()` function from `CountVectorizer`."
+    "Our next step is to turn the text into a DTM using the `CountVectorizer` function. \n",
+    "\n",
+    "There are two ways to do this. We can turn the data into a sparse matrix, which can be used within scikit-learn for further analyses. We do this using the `fit_transform()` function from `CountVectorizer`."
    ]
   },
   {
@@ -1158,7 +1178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This format is called Compressed Sparse Format. It saves a lot of memory to store the DTM in this format, but it is difficult to look at for a human. Compressed Sparse Format stores a matrix with lots of zeroes, only without the zeroes. Let's look at a sample to see the concealed zeroes:"
+    "This format is called Compressed Sparse Format. It saves a lot of memory to store the DTM in this format, but it is difficult to look at for a human. Compressed Sparse Format stores a matrix that has lots of zeroes, and saves space by omitting the zeroes. Let's look at a sample to see what it looks like WITH the zeroes:"
    ]
   },
   {
@@ -1190,9 +1210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To illustrate the techniques in this lesson we will first convert this matrix back to a Pandas dataframe, a format we're more familiar with. For larger datasets, you will have to use the Compressed Sparse Format. \n",
+    "To illustrate the techniques in this lesson we will first convert this matrix back to a Pandas dataframe, a format that's more intuitive to work with. For larger datasets, you will have to use the Compressed Sparse Format. \n",
     "\n",
-    "*Note*: In practice it is rare to transform a DTM into a Pandas dataframe, because of memory issues. I'm doing it today so we can understand the intuition behind the DTM. "
+    "*Note*: In practice it is rare to transform a DTM into a Pandas dataframe, because of memory issues. If using this notebook as a reference, don't just copy and paste--think about what you're doing to avoid crashing your system!"
    ]
   },
   {
@@ -1205,7 +1225,7 @@
     "# Note this takes quite a bit more memory, so will not be good for bigger data.\n",
     "dtm_df = pd.DataFrame(countvec.fit_transform(clean).toarray(), columns=countvec.get_feature_names())\n",
     "\n",
-    "#view the DTM DataFrame\n",
+    "#view the DTM DataFrame--note all the zeroes!\n",
     "dtm_df"
    ]
   },
@@ -1215,7 +1235,7 @@
    "source": [
     "**What can we do with a DTM?**\n",
     "\n",
-    "We can do a number of calculations using a DTM. Because it is in the format of a matrix, we can perform any matrix algebra or vector manipulation on it, which enables some pretty exciting things (think vector space and Euclidean geometry). But, what do we lose when we represent text in this format? (Hint: Think \"bag of words\".)\n",
+    "Because DTMs have a matrix format, we can perform any matrix algebra or vector manipulation on it, which enables some pretty exciting things (think vector space and Euclidean geometry). But, what do we lose when we represent text in this format? (Hint: Think \"bag of words\".)\n",
     "\n",
     "For a toy example, we can quickly identify the most frequent words (compare this to how many steps it took using NLTK)."
    ]
@@ -1235,7 +1255,13 @@
    "source": [
     "### Challenge\n",
     "\n",
-    "I've read in a bunch of Jane Austen books into a variable called `books`, which is a list of strings and each string is an entire book. Turn them into a DTM. What will be the rows and columns?"
+    "I've read a bunch of Jane Austen books into a variable called `books`, which is a list of strings (each string is a book). Turn them into a DTM. \n",
+    "\n",
+    "Make sure you know:\n",
+    "\n",
+    "- What will be the rows and columns?\n",
+    "- What type is the DTM object?\n",
+    "- How many Austen books did we read in?"
    ]
   },
   {
@@ -1250,7 +1276,9 @@
     "for fname in fnames:\n",
     "    with open(fname) as f:\n",
     "        text = f.read()\n",
-    "    books.append(text)"
+    "    books.append(text)\n",
+    "    \n",
+    "books[3][10000:11000] # check out slice of a book"
    ]
   },
   {
@@ -1286,7 +1314,7 @@
    "source": [
     "## Further Resources\n",
     "\n",
-    "This is a great starting point, but there is a lot more to learn about preprocessing. To acquaint yourself with a few more tools and try a few more challenges, check out `extra/preprocessing_extra.ipynb`. There are also other resources listed in [the workshop repo](https://github.com/jhaber-zz/nlp-python-2020) and [many useful intro-level NLP scripts prepared by Laura Nelson](https://github.com/lknelson/text-analysis-course). To gain more practice and tools, come back for tomorrow's session!\n",
+    "This is a great starting point, but there is a lot more to learn about preprocessing. To acquaint yourself with a few more tools and try a few more challenges, check out `extra/preprocessing_extra.ipynb`. There are also other resources listed in [the workshop repo](https://github.com/jhaber-zz/nlp-python-2020), including [many useful intro-level NLP scripts prepared by Laura Nelson](https://github.com/lknelson/text-analysis-course). To gain more practice and tools, come back for tomorrow's session!\n",
     "\n",
     "[Denny, Matthew J., and Arthur Spirling. 2018. “Text Preprocessing for Unsupervised Learning: Why It Matters, When It Misleads, and What to Do about It.” Political Analysis 26(2):168–189.\n",
     "](https://www.cambridge.org/core/journals/political-analysis/article/text-preprocessing-for-unsupervised-learning-why-it-matters-when-it-misleads-and-what-to-do-about-it/AA7D4DE0AA6AB208502515AE3EC6989E)\n",
