--- a/solutions/preprocessing-solutions.ipynb
+++ b/solutions/preprocessing-solutions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing - Solutions"
+    "# Preprocessing - Solutions to Challenges"
    ]
   },
   {
